--- a/SpeechToText/SpeechToText/SpeechToText.csproj
+++ b/SpeechToText/SpeechToText/SpeechToText.csproj
@@ -69,6 +69,11 @@
     <Compile Include="JSON_response.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SpeechToText.cs" />
     <Compile Include="ToneAnalyzerJSON.cs" />
     <Compile Include="ToneGenrator.cs" />
@@ -78,14 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -108,6 +108,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="ReadMe.txt" />
+    <None Include="Resources\logo.png" />
+    <None Include="Resources\minimize.png" />
+    <None Include="Resources\close.png" />
     <None Include="Resources\icons8_Translation_50px.png" />
     <None Include="Resources\Settings.png" />
     <None Include="Resources\Upload.png" />
