--- a/SpeechToText/SpeechToText/packages.config
+++ b/SpeechToText/SpeechToText/packages.config
@@ -3,4 +3,5 @@
   <package id="NAudio" version="1.8.4" targetFramework="net461" />
   <package id="NAudio.Lame" version="1.0.7" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="SplashScreen.Winforms" version="1.0.0" targetFramework="net461" />
 </packages>
